Add posts and comments function and Jobs API
